@@ -1,6 +1,7 @@
 Version 3.1.3 To Be Released
 ============================
 BUG: Ticket#836 - TRatingList downgrade (Christophe)
+BUG: Ticket#843 - TDataList alternatinItem issue after changes in rev 2227 (Christophe)
 BUG: Ticket#849 - TDatePicker selecting current date problem (Christophe)
 
 Version 3.1.2 April 21, 2008
